--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.13.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.3.1",
+    "@types/sanitize-html": "^2.11.0",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
